# vg-gestion

./: .env  Makefile  README.md  docker-compose.yml  fly.api.toml  fly.worker.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: ce0bdee5a4cd_init.py
docker/: Dockerfile.api  Dockerfile.worker
tests/: test_health.py  test_inventory.py  test_orders.py
vg-backend/app/: config.py  main.py
vg-backend/app/api/v1/: health.py  inventory.py  manufacturing.py  orders.py  products.py  router.py  webhooks.py
vg-backend/app/db/: session.py
vg-backend/app/db/models/: __init__.py  boxes.py  compositions.py  costing.py  events.py  hardware.py  inventory_moves.py  locations.py  manufacturing.py  orders.py  pieces.py  products.py  reservations.py  stock.py  suppliers.py  user_locations.py  users.py  webhooks.py
vg-backend/app/schemas/: inventory.py  orders.py  products.py
vg-backend/app/security/: auth.py
vg-backend/app/services/: inventory.py  reservations.py  shopify.py
vg-backend/app/utils/: idempotency.py  locking.py
vg-backend/app/workers/: celery_app.py  tasks.py
